--- a/6prak/first-sem.css
+++ b/6prak/first-sem.css
@@ -1,3 +1,25 @@
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 30px;
+}
+table, th, td {
+    border: 1px solid black;
+}
+th, td {
+    padding: 8px;
+    text-align: left;
+}
+th {
+    background-color: #f2f2f2;
+}
+.section-title {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+
 aside {
     background-color: greenyellow; 
 }
@@ -118,24 +140,21 @@ nav {
 }
 
 .header-nav a {
-    color: #fff;
-    text-decoration: none;
     padding: 10px;
-    transition: background-color 0.3s;
+    text-decoration: none;
+    color: black;   
 }
 
-.header-nav a:hover {
-    background-color: #555;
+.header-nav a:hover{
+    color:red;
 }
+
 
 .header-nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #333;
-    padding: 10px;
+    border: 1px solid #000;
+    padding: 20px;
+    border-top: 0px;
 }
-
 
 .header-text{
     text-align: right;
@@ -152,6 +171,7 @@ nav {
 
 .information-block {
     width: 100%;
+    margin: 20px;
 }
 
 .input-info {
@@ -165,7 +185,35 @@ nav {
     width: 100px;
     height: 100px;
 }
-
+.container {
+    margin-bottom: 20px;
+}
+.address-label {
+    font-weight: bold;
+}
+.address-input {
+    width: 100%;
+    padding: 5px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+.map {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 20px;
+}
+.pdf-container {
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+.working-program {
+    width: 100%;
+    height: 200px;
+    border: 1px solid black;
+    padding: 10px;
+    margin-top: 10px;
+    resize: vertical;
+}
 .main {
     display: flex;
     display: none;
@@ -247,19 +295,4 @@ body {
 
 .backend-video {
     padding-bottom: 40px;
-}
-
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, auto);
-    gap: 20px;
-    margin: 20px;
-}
-
-.grid-item {
-    background-color: #f0f0f0;
-    padding: 20px;
-    text-align: center;
-    border: 1px solid #ccc;
 }
